export interface ItemBO {
    Id?: number;
    ActualCount?: string;
    Count?: string;
    FirstCount?: string;
    ItemID: string;
    Name?: string;
    Description: string;
    BuisnessUnit: string;
    UOM: string;
    BarcodeID: string;
    SERIAL_CONTROL: string;
    Item_Image: string;
    Location?: string;
    Stock_Level_1: string;
    Stock_Level_2: string;
    Stock_Level_3: string;
    Stock_Level_4: string;
    ImageURL?: string;
    Status?: string;
    LastUpdated: string;
    LockedTo: string;
    AdjustmentType?: string;
    Document?: string;
    Reason?: string;
    QTY: string;
    DBName?: string;
    serial_id?: string;
    PhyBU: string;
    ISA_CRIB_IDENT : string
}
