import {ItemBO} from '../../../BOs/ItemBO/ItemBO';

export interface ListRenderItemProps {
  item: ItemBO;
  onPress: () => void;
}
